--- a/about.html
+++ b/about.html
@@ -7,5 +7,13 @@
 
 <p>This is the About Us file in my new Git Repo.</p>
 
+
+
+<p>
+	git remote add origin URL specifies that you are adding a remote repository, with the specified URL, as an origin to your local Git repo.
+
+Now we are going to push our master branch to the origin url, and set it as the default remote branch:
+</p>
+
 </body>
 </html>
